# backend/src/modules/user/router/users.js
@@ -15,5 +15,6 @@ router.put('/profile/', validation(validator['updateProfile']) , passport.authen
 router.delete('/deactivateAccount/:userId', validation(validator['deactivateProfile']) , passport.authenticate('jwt', { session: false }), userController.deactivateUserProfile)
 router.post('/bookmarkTweet', validation(validator['bookmarkTweet']) , passport.authenticate('jwt', { session: false }), userController.bookmarkTweet)
 router.post('/follow', validation(validator['followUser']), passport.authenticate('jwt', { session: false }), userController.followUser)
+router.post('/unFollow', validation(validator['unFollowUser']), passport.authenticate('jwt', { session: false }), userController.unFollowUser);
 
 module.exports = router
